# raylib-2D-pixel-game

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  UML.uxf  main.cpp
src/: main.cpp
src/core/: Config.h  Game.cpp  Game.h
src/entities/: Entities.cpp  Entities.h  Entity.cpp  Entity.h  Player.cpp  Player.h
src/entities/Enemy/: Enemy.cpp  Enemy.h
src/entities/Enemy/Dummy/: Dummy.cpp  Dummy.h
src/entities/Playable/: Player.cpp  Player.h
src/entities/Player/: Player.cpp  Player.h
